--- a/css/styles.css
+++ b/css/styles.css
@@ -596,7 +596,7 @@ a:focus {
   border-radius: 4px;
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
     0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
-  background-color: var(--color-dairy);
+  background: #fcfcfc;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   padding: 72px 24px 24px 24px;
@@ -614,16 +614,17 @@ a:focus {
   height: 24px;
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  background-color: var(--color-cornflower);
+  background-color: #e7e9fc;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
 }
 
 .modal__button-close:hover,
 .modal__button-close:focus {
-  background-color: var(--color-ocean);
+  background-color: #404bbf;
   border: none;
-  fill: var(--color-white);
+  fill: #ffffff;
 }
 
 .modal__icon-close {
@@ -637,7 +638,7 @@ a:focus {
 }
 
 .modal__title {
-  color: var(--color-navy-blue);
+  color: #2e2f42;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -652,7 +653,7 @@ a:focus {
 }
 
 .modal__label {
-  color: var(--color-light-slate);
+  color: #8e8f99;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
@@ -677,11 +678,11 @@ a:focus {
 }
 
 .modal__input:focus {
-  border-color: var(--color-iris);
+  border-color: #4d5ae5;
 }
 
 .modal__input:focus + .modal__icon {
-  fill: var(--color-iris);
+  fill: #4d5ae5;
 }
 
 .modal__icon {
@@ -720,7 +721,7 @@ a:focus {
 }
 
 .modal__text-field:focus {
-  border-color: var(--color-iris);
+  border-color: #4d5ae5;
 }
 
 .modal__check-wrapper {
@@ -728,13 +729,13 @@ a:focus {
 }
 
 .modal__check-input:checked + .modal__check-text .modal__check-box {
-  background-color: var(--color-ocean);
+  background-color: #404bbf;
   border: none;
-  fill: var(--color-cloud);
+  fill: #f4f4fd;
 }
 
 .modal__check-text {
-  color: var(--color-light-slate);
+  color: #8e8f99;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
@@ -757,7 +758,7 @@ a:focus {
 
 .modal__link-text {
   margin-left: 4px;
-  color: var(--color-iris);
+  color: #4d5ae5;
   text-decoration: underline;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -776,12 +777,12 @@ a:focus {
   min-width: 169px;
   height: 56px;
   border-radius: 4px;
-  background-color: var(--color-iris);
+  background-color: #4d5ae5;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   padding: 16px 32px;
   margin: 0 auto;
   display: block;
-  color: var(--color-white);
+  color: #ffffff;
   text-align: center;
   border: none;
   cursor: pointer;
