--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,7 @@ ul {
   list-style-type: none;
   box-sizing: border-box;
   padding: 0;
+  margin: 0;
 }
 
 header {
@@ -61,6 +62,15 @@ p {
   margin: 0 0 0 0;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
 .header {
   border-bottom: 1px solid #e7e9fc;
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
@@ -68,6 +78,7 @@ p {
 }
 
 .link-header {
+  display: block;
   letter-spacing: 0.02em;
   font-weight: 500;
   font-size: 16px;
@@ -78,12 +89,21 @@ p {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link-header::after {
+.link-header:hover {
+  color: #404bbf;
+}
+
+.link-header.current {
+  color: #404bbf;
+}
+
+.current::after {
   content: "";
   position: absolute;
   left: 0;
-  bottom: 5px;
+  bottom: -1px;
   height: 4px;
+  width: 100%;
   background-color: #404bbf;
   border-radius: 2px;
 }
@@ -99,16 +119,23 @@ p {
 }
 
 .link-inform {
+  display: block;
+  padding: 24px 0;
   letter-spacing: 0.02em;
   color: #434455;
   line-height: 1.5;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.link-inform:hover {
+  color: #404bbf;
+}
+
 .main-inform {
   background-color: #2e2f42;
   padding: 188px 0;
-
+  margin: auto;
+  max-width: 1440px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -164,21 +191,13 @@ p {
   color: #434455;
 }
 
-.card-sprite {
-  border-radius: 4px;
-  border: 1px solid var(--LIGHT-SLATE, #8e8f99);
-  background: var(--CLOUD, #f4f4fd);
-}
-
 .social-links {
   display: flex;
   margin-right: auto;
   margin-left: auto;
   justify-content: center;
-  width: 206px;
-  height: 44px;
   padding: 0;
-  margin-top: 16px;
+  margin-top: 8px;
   gap: 24px;
 }
 
@@ -192,8 +211,6 @@ p {
   align-items: center;
   justify-content: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  width: 40px;
-  height: 40px;
 }
 
 .link-icon {
@@ -339,11 +356,6 @@ p {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-a:hover,
-a:focus {
-  color: #404bbf;
-}
-
 .logo-footer {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -379,7 +391,7 @@ a:focus {
 .address-link-list {
   display: flex;
   gap: 40px;
-  margin-left: 125px;
+  margin-left: auto;
 }
 
 .second-section {
@@ -404,6 +416,8 @@ a:focus {
   background-color: #f4f4fd;
   border-radius: 4px;
   margin-bottom: 8px;
+  border-radius: 4px;
+  border: 1px solid var(--LIGHT-SLATE, #8e8f99);
 }
 
 .footer {
@@ -436,7 +450,7 @@ a:focus {
 }
 
 .footer-social-links {
-  margin-right: 120px;
+  margin-right: 80px;
 }
 
 .footer-social-media {
@@ -576,14 +590,17 @@ a:focus {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
+  opacity: 0; /* set initial opacity to 0 */
+  pointer-events: none; /* disable pointer events */
+  visibility: hidden; /* hide the element */
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.backdrop.is-hidden {
-  opacity: 0;
-  pointer-events: none;
-  visibility: hidden;
+.backdrop.is-open {
+  opacity: 1; /* set opacity to 1 to make it visible */
+  pointer-events: auto; /* enable pointer events */
+  visibility: visible; /* make the element visible */
 }
 
 .modal {
@@ -598,7 +615,6 @@ a:focus {
     0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
   background: #fcfcfc;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
   padding: 72px 24px 24px 24px;
 }
 
@@ -686,7 +702,7 @@ a:focus {
 }
 
 .modal__icon {
-  fill: var(--color-navy-blue);
+  fill: #2e2f42;
   position: absolute;
   left: 16px;
   top: 50%;
@@ -728,15 +744,18 @@ a:focus {
   margin-bottom: 24px;
 }
 
-/*.modal__check-input:checked + .modal__check-text {
-  border: none;
-  fill: #f4f4fd;
-}*/
+.modal__check-input:focus + .modal__check-text .modal__check-box {
+  border-color: #404bbf;
+}
 
 .modal__check-input:checked + .modal__check-text .modal__check-box {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
+}
+
+.modal__check-box:focus {
+  border: 2px solid #2e2f42;
 }
 
 .modal__check-text {
